--- a/.github/workflows/no-plans-to-merge.yaml
+++ b/.github/workflows/no-plans-to-merge.yaml
@@ -20,3 +20,5 @@ jobs:
               repo: context.repo.repo,
               body: 'No plans to merge 👍'
             })
+
+# This is a random comment
