--- a/.github/workflows/no-plans-to-merge.yaml
+++ b/.github/workflows/no-plans-to-merge.yaml
@@ -5,9 +5,13 @@ on:
     types:
       - closed
 
+permissions:
+  pull-requests: write
+
 jobs:
   no-plans-to-merge:
     runs-on: ubuntu-latest
+    if: github.event.pull_request.merged == false
 
     steps:
       - name: Create a Comment on the PR
